# robots_colony

./: CMakeLists.txt  README.md  package.xml  robots_colony.launch  robots_colony.world  Отчёт.docx
msg/: Commands.msg
queen_model/urdf/: baxter.urdf  left_end_effector.urdf.xacro  queen.urdf.xacro  right_end_effector.urdf.xacro
queen_model/urdf/baxter_base/: baxter_base.urdf.xacro
queen_model/urdf/electric_gripper/: example_end_effector.urdf.xacro  rethink_electric_gripper.xacro
queen_model/urdf/electric_gripper/fingers/: basic_hard_tip.xacro  basic_soft_tip.xacro  extended_narrow.xacro  extended_wide.xacro  half_round_tip.xacro  paddle_tip.xacro  standard_narrow.xacro  standard_wide.xacro
queen_model/urdf/null_gripper/: example_end_effector.urdf.xacro
queen_model/urdf/pneumatic_gripper/: example_end_effector.urdf.xacro
src/: queen.cpp  worker.cpp
