<?xml version="1.0"?>
<package>
  <name>robots_colony</name>
  <version>0.0.0</version>
  <description>The robots colony package</description>
  <maintainer email="andrei@todo.todo">andrei</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rethink_ee_description</run_depend>
</package>
