<?xml version="1.0"?>
<package format="2">
  <name>robots_colony</name>
  <version>0.0.0</version>
  <description>The robots colony package</description>
  <maintainer email="andrei@todo.todo">andrei</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
</package>
